--- a/frontend/src/CSS/DashBoard.css
+++ b/frontend/src/CSS/DashBoard.css
@@ -12,7 +12,7 @@ body {
   align-items: center;
   background: linear-gradient(135deg, #3a3d40, #181818);
 }
-form {
+.login-container form {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -31,7 +31,7 @@ form {
   color: #ffffffee;
   letter-spacing: 1px;
 }
-form input {
+.login-container form input {
   width: 100%;
   background-color: rgba(255, 255, 255, 0.88);
   color: #000;
@@ -43,7 +43,7 @@ form input {
   font-size: 1rem;
   transition: 0.2s ease;
 }
-form input:focus {
+.login-container form input:focus {
   /* transform: scale(1.03); */
   box-shadow: 0 0 8px rgba(255, 255, 255, 0.4);
 }
@@ -66,8 +66,8 @@ form input:focus {
   transform: translateY(-3px);
   box-shadow: 0 5px 15px rgba(255, 255, 255, 0.3);
 }
-form div,
-form span {
+.login-containerform div,
+.login-container form span {
   color: #ff4444;
   font-size: 0.85rem;
   margin-top: -0.3rem;
@@ -94,9 +94,11 @@ form span {
   font-size: 22px;
   font-weight: bold;
   margin-bottom: 10px;
+  text-align: center;
 }
 
 .sidebar-links {
+  text-align: justify;
   list-style: none;
   padding: 0;
   margin: 0;
