--- a/frontend/src/CSS/Billing.css
+++ b/frontend/src/CSS/Billing.css
@@ -129,3 +129,111 @@
   margin-top: -5px;
   display: block;
 }
+
+/* ------------------------------bill pop up--------------- */
+.invoice-popup {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #0000008e;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 999;
+}
+
+.invoice-box {
+  background: white;
+  width: 650px;
+  padding: 25px;
+  border-radius: 8px;
+  box-shadow: 0 0 10px #00000040;
+  font-family: Arial, sans-serif;
+}
+
+.invoice-info, .invoice-customer {
+  margin-bottom: 15px;
+  font-size: 14px;
+}
+
+
+.invoice-table {
+  width: 100%;
+  border-collapse: collapse;
+  margin: 15px 0;
+}
+
+.invoice-table th,
+.invoice-table td {
+  border: 1px solid #ccc;
+  padding: 8px;
+  text-align: left;
+}
+
+.invoice-table th {
+  background: #f5f5f5;
+}
+
+.invoice-total {
+  margin-top: 10px;
+  font-size: 18px;
+  text-align: right;
+  font-weight: bold;
+}
+
+.invoice-footer {
+  text-align: center;
+  margin-top: 10px;
+  font-size: 14px;
+  color: #555;
+}
+
+.invoice-btns {
+  margin-top: 20px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.invoice-btns button {
+  padding: 8px 16px;
+  border: none;
+  background: #1e88e5;
+  color: white;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.invoice-btns button:last-child {
+  background: #777;
+}
+
+.invoice-btns button:hover {
+  opacity: .9;
+}
+
+.invoice-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
+.shop-info h2 {
+  margin: 0;
+}
+
+.invoice-meta {
+  text-align: right;
+  font-size: 14px;
+}
+
+.invoice-customer {
+  margin-top: 15px;
+  text-align: left;
+  font-size: 15px;
+}
+
+.invoice-customer h3 {
+  margin-bottom: 5px;
+}
