--- a/frontend/src/CSS/BillHistory.css
+++ b/frontend/src/CSS/BillHistory.css
@@ -19,7 +19,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0,0,0,0.5);
+  background: rgba(0, 0, 0, 0.5);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -33,9 +33,9 @@
   max-width: 700px;
   padding: 20px;
   border-radius: 8px;
-  box-shadow: 0px 0px 12px rgba(0,0,0,0.15);
-  max-height: 90vh;    
-  overflow-y: auto;    
+  box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.15);
+  max-height: 90vh;
+  overflow-y: auto;
 }
 .close-popup {
   margin-top: 20px;
@@ -47,7 +47,7 @@
 }
 
 .view-btn {
-  padding: 6px 12px;
+  padding: 5px 12px;
   background: #007bff;
   color: white;
   border-radius: 4px;
@@ -59,11 +59,14 @@
 @media screen and (max-width: 480px) {
   .bill-history-container {
     padding: 10px;
+    margin-bottom: 5rem;
   }
 
   .search-bill {
     padding: 8px;
     font-size: 14px;
+    width: 85%;
+    border-radius: 5px;
   }
 
   .invoice-popup {
@@ -84,7 +87,9 @@
 
   .view-btn {
     padding: 5px 10px;
-    font-size: 12px;
+    font-size: 11px;
+    margin-right: 5px;
+    margin-bottom: 5px;
   }
 }
 
@@ -96,6 +101,7 @@
   .search-bill {
     padding: 9px;
     font-size: 15px;
+    width: 80%;
   }
 
   .invoice-popup {
@@ -116,7 +122,7 @@
 
   .view-btn {
     padding: 5px 11px;
-    font-size: 13px;
+    font-size: 11px;
   }
 }
 
@@ -128,6 +134,8 @@
   .search-bill {
     padding: 10px;
     font-size: 15px;
+    width: 80%;
+    border-radius: 5px;
   }
 
   .invoice-popup {
@@ -148,6 +156,10 @@
 
   .view-btn {
     padding: 6px 12px;
-    font-size: 14px;
+    font-size: 12px;
+  }
+  .delete-btn {
+    padding: 6px 12px;
+    font-size: 12px;
   }
 }
