--- a/frontend/src/CSS/BillHistory.css
+++ b/frontend/src/CSS/BillHistory.css
@@ -46,13 +46,17 @@
   cursor: pointer;
 }
 
-.view-btn {
+.view-btn,.bill-delete-btn {
   padding: 5px 12px;
   background: #007bff;
   color: white;
   border-radius: 4px;
   border: none;
   cursor: pointer;
+  margin-left: 5px;
+}
+.bill-delete-btn{
+  background: red;
 }
 
 
@@ -85,7 +89,7 @@
     font-size: 13px;
   }
 
-  .view-btn {
+  .view-btn ,.bill-delete-btn{
     padding: 5px 10px;
     font-size: 11px;
     margin-right: 5px;
@@ -120,7 +124,7 @@
     font-size: 14px;
   }
 
-  .view-btn {
+  .view-btn ,.bill-delete-btn {
     padding: 5px 11px;
     font-size: 11px;
   }
@@ -154,11 +158,7 @@
     font-size: 15px;
   }
 
-  .view-btn {
-    padding: 6px 12px;
-    font-size: 12px;
-  }
-  .delete-btn {
+  .view-btn ,.bill-delete-btn{
     padding: 6px 12px;
     font-size: 12px;
   }
